regresando a la raiz

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>Integrity Solutions</title>
-  <base href="/">
+  <base href="C:/Program Files/Git/IntegridadWebSitePage/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
@@ -13,5 +13,5 @@
 <body id="idbody">
   <app-root ></app-root>
   
-<script src="runtime-es2015.2488d026d5fb0953258c.js" type="module"></script><script src="polyfills-es2015.381d9a13572337f7438a.js" type="module"></script><script src="runtime-es5.a6a596c6de58f3643bfc.js" nomodule></script><script src="polyfills-es5.b4a1245bafd0971b6893.js" nomodule></script><script src="main-es2015.a6044b8f671b3dd9f409.js" type="module"></script><script src="main-es5.54835230156c90cad2bb.js" nomodule></script></body>
+<script src="runtime-es2015.e084bfef830e074f2c96.js" type="module"></script><script src="polyfills-es2015.381d9a13572337f7438a.js" type="module"></script><script src="runtime-es5.bc527f36c0022501975c.js" nomodule></script><script src="polyfills-es5.b4a1245bafd0971b6893.js" nomodule></script><script src="main-es2015.6705aea3c06405d9a557.js" type="module"></script><script src="main-es5.79420dd46c5ce1682ca3.js" nomodule></script></body>
 </html>
