--- a/404.html
+++ b/404.html
@@ -9,9 +9,9 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-<link rel="stylesheet" href="styles.c48c1babe8e812822f63.css"></head>
+</head>
 <body id="idbody">
   <app-root ></app-root>
   
-<script src="runtime-es2015.e084bfef830e074f2c96.js" type="module"></script><script src="polyfills-es2015.381d9a13572337f7438a.js" type="module"></script><script src="runtime-es5.bc527f36c0022501975c.js" nomodule></script><script src="polyfills-es5.b4a1245bafd0971b6893.js" nomodule></script><script src="main-es2015.6705aea3c06405d9a557.js" type="module"></script><script src="main-es5.79420dd46c5ce1682ca3.js" nomodule></script></body>
+<script src="runtime-es2015.js" type="module"></script><script src="polyfills-es2015.js" type="module"></script><script src="runtime-es5.js" nomodule></script><script src="polyfills-es5.js" nomodule></script><script src="styles-es2015.js" type="module"></script><script src="styles-es5.js" nomodule></script><script src="vendor-es2015.js" type="module"></script><script src="main-es2015.js" type="module"></script><script src="vendor-es5.js" nomodule></script><script src="main-es5.js" nomodule></script></body>
 </html>
